# TheNewsAPI_MCP

./: .gitignore  README.md  pyproject.toml
newsmpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_mcp.py
thenewsapi_mcp/: server.py  thenewsapi_client.py
