[project]
name = "newsmpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.14.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
